# otocap-core

./: Cargo.toml  README.md
src/: controller.rs  devices.rs  encoder.rs  lib.rs  manager.rs  processor.rs  recorder.rs
